--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -36,48 +36,20 @@
           Otherwise, take our <a href="quiz.html" style="color:rgb(128,0,32); font-weight:bold; text-decoration:none;">QUIZ</a> to help us match you with the coach best suited to your needs.
       </p>
       <p>
-          <img src="coach_1.png" alt="coach_1" class="coach-image-chat" id="coach_1_image" onclick="openTawkChat()">
-          <img src="coach_2.png" alt="coach_2" class="coach-image-chat" id="coach_2_image">
-          <img src="coach_3.png" alt="coach_3" class="coach-image-chat" id="coach_3_image">
+          <img src="coach_1.png" alt="coach_1" class="coach-image-chat" id="coach_1_image" onclick="openTawkChat_1()">
+          <img src="coach_2.png" alt="coach_2" class="coach-image-chat" id="coach_2_image" onclick="openTawkChat_2()">
+          <img src="coach_3.png" alt="coach_3" class="coach-image-chat" id="coach_3_image" onclick="openTawkChat_3()">
       </p>
 
       <!-- Tawk.to Chat Container (Initially Hidden) -->
       <div id="chatbot-container-coach_1" class="chatbot-container" style="display: none;"></div>
+      <div id="chatbot-container-coach_2" class="chatbot-container" style="display: none;"></div>
+      <div id="chatbot-container-coach_3" class="chatbot-container" style="display: none;"></div>
 
     <script src="script.js"></script>
     <script src="toggle.js"></script>
 
     <!-- JavaScript to load Tawk.to only on click -->
-    <script>
-        function openTawkChat() {
-            // Show the chat container
-            document.getElementById("chatbot-container-coach_1").style.display = "block";
-
-            // Load Tawk.to script if it's not already loaded
-            if (typeof Tawk_API === 'undefined') {
-                var Tawk_API = Tawk_API || {};
-                var Tawk_LoadStart = new Date();
-                
-                var script = document.createElement("script");
-                script.async = true;
-                script.src = 'https://embed.tawk.to/6758a23749e2fd8dfef5fa5d/1iep3jau7';
-                script.charset = 'UTF-8';
-                script.setAttribute('crossorigin', '*');
-                document.getElementsByTagName('body')[0].appendChild(script);
-
-                // Wait until Tawk_API is fully loaded before calling methods
-                script.onload = function() {
-                    // Since we're using the free version, we don't use setAttributes
-                    // Simply call Tawk_API onLoad and make basic customizations
-                    if (Tawk_API) {
-                        Tawk_API.onLoad = function () {
-                            // Example of setting a simple offline message without attributes
-                            Tawk_API.setOfflineMessage('Sorry, we are currently offline. Leave a message!');
-                        };
-                    }
-                };
-            }
-        }
-    </script>
+    <script src="tawk.js"></script>
 </body>
 </html>
