--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -33,9 +33,8 @@
     </nav>
     <div class="quiz-result-content">
         <div class="result-text-container" id="result">Your result message here</div> 
-        <a href="chat.html">
-            <button class="res-btn-primary">Start Chatting</button>
-        </a>
+        <button class="res-btn-primary" onclick="openTawkChat()">Start Chatting</button>
+        <div id="chatbot-container-coach_1" class="chatbot-container" style="display: none;"></div>
     </div>
     <script>
  
@@ -46,10 +45,10 @@
             let personalizedMessage = '';
             let coachImage = ''; 
             
-            if (result.score >= 8) {
+            if (result.score >= 25) {
                 personalizedMessage = 'Excellent job! Just a few final steps to finish. Please contact our coach, Ethan Miller, for further assistance';
                 coachImage = 'coach_1.png'; 
-            } else if (result.score >= 4) {
+            } else if (result.score >= 15) {
                 personalizedMessage = 'Good effort! You’re almost there! Please contact our coach, Olivia Jhonson, for further assistance';
                 coachImage = 'coach_2.png'; 
             } else {
@@ -64,6 +63,7 @@
             imageElement.src = coachImage;
             imageElement.alt = 'Coach Image';
             imageElement.classList.add('coach-image');
+
             imageContainer.appendChild(imageElement);
             document.getElementById('result').appendChild(imageContainer);
 
@@ -77,6 +77,7 @@
     </script>
     <script src="toggle.js"></script>
     <script src="quiz.js"></script> 
+    <script src="tawk.js"></script>
 
 </body>
 </html>
