--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -52,7 +52,8 @@
             <h3>Why Choose SafeSense?</h3>
             <p>We are more than just a self-defense platform—we’re a community...</p>
         </div>
-    </div>    
+    </div>
+    <script src="activeTab.js"></script>   
     <script src="script.js"></script>
     <script src="toggle.js"></script>S
     <script src="limitChatQuiz.js"></script> 
