--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -45,7 +45,8 @@
       <div id="chatbot-container-coach_1" class="chatbot-container" style="display: none;"></div>
       <div id="chatbot-container-coach_2" class="chatbot-container" style="display: none;"></div>
       <div id="chatbot-container-coach_3" class="chatbot-container" style="display: none;"></div>
-
+      
+    <script src="activeTab.js"></script> 
     <script src="script.js"></script>
     <script src="toggle.js"></script>
 
