--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -45,6 +45,7 @@
       sessionStorage.setItem("quizStarted", "true");
     }
   </script>
+  <script src="activeTab.js"></script> 
   <script src="toggle.js"></script>
 </body>
 </html>
