--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -40,6 +40,7 @@
       <a class="get-started-btn" href="quiz.html">LET’S GET STARTED</a>
     </div>
   </div>
+  <script src="activeTab.js"></script> 
   <script src="toggle.js"></script>
   </body>
   </html>
