--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -80,6 +80,7 @@
         }
 
     </script>
+     <script src="activeTab.js"></script> 
     <script src="toggle.js"></script>
     <script src="quiz.js"></script> 
     <script src="tawk.js"></script>
