--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -38,7 +38,7 @@
       <h3><span style="color: rgb(128, 0, 32); font-weight: bold";>STAY PREPARED, STAY PROTECTED</span></h3>
       <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p>
       <h3>Ready to defend confidently?</h3>
-      <a class="get-started-btn">LET’S GET STARTED</a>
+      <a id="get-started" class="get-started-btn">LET’S GET STARTED</a>
     </div>
   </div>
   
