--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="login.css"> 
     <link rel="stylesheet" href="canv.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="script.js" defer></script>    
+    <script src="script.js" defer></script>
+    <script src="limitChatQuiz.js" defer></script>   
 </head>
 <body> 
     <nav class="navbar" id="navbar-placeholder">
