Revert "Initial set up"
This reverts commit c5c90c8e7ab18b31b11720e8a14594b522d52711.

--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -19,9 +19,7 @@
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>            
 
-        <div id="login-register-btn" class="about-login-btn">
-            <a href="login.html">Login/Register</a>
-        </div>
+        <div id="login-register-btn" class="about-login-btn" onclick="loginRegister()">Login/Register</div>
         <div class="person-icon" id="person-icon-container" onclick="toggleDropdown()">
           <img src="person.png" alt="Person Icon" class="person-icon img">
           <div class="dropdown-menu" id="dropdown-menu">
