--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -19,7 +19,7 @@
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>            
 
-        <div id="login-register-btn" class="about-login-btn">
+        <div class="login-register">
             <a href="login.html">Login/Register</a>
         </div>
         <div class="person-icon" id="person-icon-container" onclick="toggleDropdown()">
@@ -59,6 +59,7 @@
     <script src="script.js"></script>
     <script src="toggle.js"></script>S
     <script src="limitChatQuiz.js"></script> 
+    <script src="activeTab.js"></script>
    
 </body>
 </html>
