--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -6,7 +6,8 @@
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="about.css"> 
-    <link rel="stylesheet" href="canv.css">       
+    <link rel="stylesheet" href="canv.css"> 
+    <script src="limitChatQuiz.js"></script>       
 </head>
 <body> 
     <nav class="navbar">
@@ -19,7 +20,7 @@
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>            
 
-        <div class="login-register">
+        <div id="login-register-btn"class="login-register">
             <a href="login.html">Login/Register</a>
         </div>
         <div class="person-icon" id="person-icon-container" onclick="toggleDropdown()">
@@ -58,7 +59,7 @@
       
     <script src="script.js"></script>
     <script src="toggle.js"></script>S
-    <script src="limitChatQuiz.js"></script> 
+    
     <script src="activeTab.js"></script>
    
 </body>
