Adding about.html

--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -58,8 +58,7 @@
     </div>
       
     <script src="script.js"></script>
-    <script src="toggle.js"></script>S
-    
+    <script src="toggle.js"></script>    
     <script src="activeTab.js"></script>
    
 </body>
