--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="canv.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/canv.css">
     <script src="limitChatQuiz.js"></script>
 </head>
 <body>
     <nav class="navbar">
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="images/logo.png" alt="Logo" class="logo">
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -24,13 +24,13 @@
             <a href="login.html">Login/Register</a>
         </div>
         <div class="person-icon" id="person-icon-container" onclick="toggleDropdown()">
-            <img src="person.png" alt="Person Icon" class="person-icon img">
+            <img src="images/person.png" alt="Person Icon" class="person-icon img">
             <div class="dropdown-menu" id="dropdown-menu">
                 <div class="logout" onclick="logout()">Log out</div>
             </div>
         </div>
         <div class="flag-icon">
-            <img src="armenian-flag.png" alt="Armenian Flag">
+            <img src="images/armenian-flag.png" alt="Armenian Flag">
         </div>
     </nav>
 
@@ -41,7 +41,7 @@
 
     <div id="about-content" class="about-container">
         <div class="about-image-container">
-            <img src="about.png" alt="Self-defense Image" class="about-image">
+            <img src="images/about.png" alt="Self-defense Image" class="about-image">
         </div>
         <div class="about-text-container">
             <h1>About Us</h1>
