--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="canv.css"> 
+    <link rel="stylesheet" href="css/canv.css"> 
 </head>
 <body>
 
@@ -20,13 +20,13 @@
         </ul>
         
         <div class="person-icon" onclick="toggleDropdown()">
-            <img src="person.png" alt="Person Icon" class="person-icon img">
+            <img src="images/person.png" alt="Person Icon" class="person-icon img">
             <div class="dropdown-menu" id="dropdown-menu">
                 <div class="logout" onclick="logout()">Log out</div>
             </div>
         </div>
         <div class="flag-icon">
-            <img src="armenian-flag.png" alt="Armenian Flag">
+            <img src="images/armenian-flag.png" alt="Armenian Flag">
         </div>
     </nav>
 
@@ -36,9 +36,9 @@
           Otherwise, take our <a href="quiz.html" style="color:rgb(128,0,32); font-weight:bold; text-decoration:none;">QUIZ</a> to help us match you with the coach best suited to your needs.
       </p>
       <p>
-          <img src="coach_1.png" alt="coach_1" class="coach-image-chat" id="coach_1_image" onclick="openTawkChat_1()">
-          <img src="coach_2.png" alt="coach_2" class="coach-image-chat" id="coach_2_image" onclick="openTawkChat_2()">
-          <img src="coach_3.png" alt="coach_3" class="coach-image-chat" id="coach_3_image" onclick="openTawkChat_3()">
+          <img src="images/coach_1.png" alt="coach_1" class="coach-image-chat" id="coach_1_image" onclick="openTawkChat_1()">
+          <img src="images/coach_2.png" alt="coach_2" class="coach-image-chat" id="coach_2_image" onclick="openTawkChat_2()">
+          <img src="images/coach_3.png" alt="coach_3" class="coach-image-chat" id="coach_3_image" onclick="openTawkChat_3()">
       </p>
 
       <div id="chatbot-container-coach_1" class="chatbot-container" style="display: none;"></div>
