--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="navbar" id="navbar-placeholder">
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="images/logo.png" alt="Logo" class="logo">
         <ul class="nav-links">
             <li><a href="home.html" class="active">Home</a></li>
             <li><a href="about.html">About Us</a></li>
