--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self-Defense</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="canv.css">  
+  <link rel="stylesheet" href="css/canv.css">  
 </head>
 <body>
   <nav class="navbar" id="navbar-placeholder">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
@@ -18,19 +18,19 @@
       <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
   </ul>
     <div class="person-icon" onclick="toggleDropdown()">
-      <img src="person.png" alt="Person Icon" class="person-icon img">
+      <img src="images/person.png" alt="Person Icon" class="person-icon img">
       <div class="dropdown-menu" id="dropdown-menu">
         <div class="logout" onclick="logout()">Log out</div>
       </div>
     </div>
     <div class="flag-icon">
-      <img src="armenian-flag.png" alt="Armenian Flag">
+      <img src="images/armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
   
   <div id="home-content" class="page-content">
     <div class="image-container">
-      <img src="home.png" alt="Self-defense Image" class="image">
+      <img src="images/home.png" alt="Self-defense Image" class="image">
     </div>
     <div class="text-container">
       <h1>Welcome to SelfSense</h1>
