--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self-Defense</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="canv.css">
+  <link rel="stylesheet" href="css/canv.css">
   <script src="limitChatQuiz.js" defer></script>
 </head>
 <body>
   <nav class="navbar">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -22,7 +22,7 @@
       <a href="login.html">Login/Register</a>
     </div>
     <div class="flag-icon">
-      <img src="armenian-flag.png" alt="Armenian Flag">
+      <img src="images/armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
   <div id="login-warning" class="login-warning">
@@ -31,7 +31,7 @@
 </div>
   <div id="home-content" class="page-content">
     <div class="image-container">
-      <img src="home.png" alt="Self-defense Image" class="image">
+      <img src="images/home.png" alt="Self-defense Image" class="image">
     </div>
     <div class="text-container">
       <h1>Welcome to SafeSense</h1>
