--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -6,7 +6,7 @@
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css"> 
-    <link rel="stylesheet" href="css/anv.css">
+    <link rel="stylesheet" href="css/canv.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="script.js" defer></script>
     <script src="limitChatQuiz.js" defer></script>   
