Finalize NavBar static page

--- a/backend/frontend/navbar.html
+++ b/backend/frontend/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar" id="navbar-placeholder">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
         <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
         <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
@@ -8,12 +8,12 @@
         <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
     </ul>
     <div class="person-icon" onclick="toggleDropdown()">
-        <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+        <img src="images/person-icon.png" alt="Person Icon" class="person-icon img">
         <div class="dropdown-menu" id="dropdown-menu">
           <a href="javascript:void(0);" onclick="loadPage('logout')">Log out</a>
         </div>
     </div>
     <div class="flag-icon">
-      <img src="armenian-flag.png" alt="Armenian Flag">
+      <img src="images/armenian-flag.png" alt="Armenian Flag">
     </div>
 </nav>
