--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>   
-    <link rel="stylesheet" href="quiz.css"> 
+    <link rel="stylesheet" href="css/quiz.css"> 
     <script src="quiz.js"></script>  
 </head>
 
 <body>
   <nav class="navbar" id="navbar-placeholder">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -19,7 +19,7 @@
         <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
     </ul>
     <div class="flag-icon">
-      <img src="armenian-flag.png" alt="Armenian Flag">
+      <img src="images/armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
 
