--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="canv.css"> 
-    <!-- <link rel="stylesheet" href="quiz.css"> -->
+    <link rel="stylesheet" href="css/canv.css"> 
 </head>
 
 <body>
   <nav class="navbar" id="navbar-placeholder">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -21,18 +20,18 @@
         <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
     </ul>
     <div class="person-icon" onclick="toggleDropdown()">
-      <img src="person.png" alt="Person Icon" class="person-icon img">
+      <img src="images/person.png" alt="Person Icon" class="person-icon img">
       <div class="dropdown-menu" id="dropdown-menu">
         <div class="logout" onclick="logout()">Log out</div>
       </div>
   </div>
     <div class="flag-icon">
-      <img src="armenian-flag.png" alt="Armenian Flag">
+      <img src="images/armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
   <div class="quiz-container">
     <div class="quiz-image-container">
-        <img src="quiz.png" alt="Quiz Image" class="quiz-image">
+        <img src="images/quiz.png" alt="Quiz Image" class="quiz-image">
     </div>
     <div class="quiz-page-content">
         <h1>Find Out Your Self-Protection Level</h1>
