--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -32,7 +32,7 @@
       <div id="dynamic-content"></div>
       <div class="vr-content">
           <div class="vr-image-container">
-              <img src="images/vr_glasses.png" alt="VR Glasses Image" class="vr-image">
+              <img src="images/vr_glasses.JPG" alt="VR Glasses Image" class="vr-image">
           </div>
           <div class="vr-text-container">
               <p style="color: rgb(128,0,32);">The page is still under construction</p>
