--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -46,6 +46,7 @@
       <div id="chatbot-container-coach_3" class="chatbot-container" style="display: none;"></div>
 
     <script src="script.js"></script>
+    <script src="activeTab.js"></script>
     <script src="toggle.js"></script>
     <script src="tawk.js"></script>
 </body>
