Final modifications and rectifications

--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -36,9 +36,9 @@
           Otherwise, take our <a href="quiz.html" style="color:rgb(128,0,32); font-weight:bold; text-decoration:none;">QUIZ</a> to help us match you with the coach best suited to your needs.
       </p>
       <p>
-          <img src="images/coach_1.png" alt="coach_1" class="coach-image-chat" id="coach_1_image" onclick="openTawkChat_1()">
-          <img src="images/coach_2.png" alt="coach_2" class="coach-image-chat" id="coach_2_image" onclick="openTawkChat_2()">
-          <img src="images/coach_3.png" alt="coach_3" class="coach-image-chat" id="coach_3_image" onclick="openTawkChat_3()">
+          <img src="images/coach_1.png" alt="coach_1" class="coach-image-chat" id="coach_1_image" onclick="openTawkChat(1)">
+          <img src="images/coach_2.png" alt="coach_2" class="coach-image-chat" id="coach_2_image" onclick="openTawkChat(2)">
+          <img src="images/coach_3.png" alt="coach_3" class="coach-image-chat" id="coach_3_image" onclick="openTawkChat(3)">
       </p>
 
       <div id="chatbot-container-coach_1" class="chatbot-container" style="display: none;"></div>
