--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -13,7 +13,7 @@
   <nav class="navbar" id="navbar-placeholder">
     <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="vr-glasses.html">VR Glasses</a></li>
         <li><a href="chat.html" id="chat-link">Chat</a></li>
