--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <img src="images/logo.png" alt="Logo" class="logo">
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li ><a  class="homelink">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="vr-glasses.html" id="vr-link">VR Glasses</a></li>
             <li><a href="chat.html" id="chat-link">Chat</a></li>
