--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -12,7 +12,7 @@
   <nav class="navbar" id="navbar-placeholder">
     <img src="images/logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="vr-glasses.html">VR Glasses</a></li>
         <li><a href="chat.html" id="chat-link">Chat</a></li>
@@ -22,8 +22,6 @@
       <img src="images/armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
-
-  <div id="dynamic-content"></div>
   <div id="quizContainer" class="quiz-content"></div>
   <div class="button-container">
     <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
