--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -13,7 +13,7 @@
     <nav class="navbar" id="navbar-placeholder">
         <img src="images/logo.png" alt="Logo" class="logo">
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="vr-glasses.html">VR Glasses</a></li>
             <li><a href="chat.html" id="chat-link">Chat</a></li>
@@ -29,7 +29,7 @@
           <img src="images/armenian-flag.png" alt="Armenian Flag">
         </div>
       </nav>
-      <div id="dynamic-content"></div>
+
       <div class="vr-content">
           <div class="vr-image-container">
               <img src="images/vr_glasses.JPG" alt="VR Glasses Image" class="vr-image">
