--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -50,15 +50,15 @@
             if (result.score >= 25) {
                 personalizedMessage = 'Excellent job! Just a few final steps to finish. Please contact our coach, Ethan Miller, for further assistance';
                 coachImage = 'images/coach_1.png'; 
-                chatFunction = openTawkChat(1); 
+                chatFunction = 'openTawkChat(1)'; 
             } else if (result.score >= 15) {
                 personalizedMessage = 'Good effort! You’re almost there! Please contact our coach, Olivia Jhonson, for further assistance';
                 coachImage = 'images/coach_2.png'; 
-                chatFunction = openTawkChat(2); 
+                chatFunction = 'openTawkChat(2)'; 
             } else {
                 personalizedMessage = 'Great job! To continue your journey in SafeSense please contact our coach, John Doe, for further assistance.';
                 coachImage = 'images/coach_3.png'; 
-                chatFunction = openTawkChat(3); 
+                chatFunction = 'openTawkChat(3)'; 
             }
 
             document.getElementById('result').innerHTML = `<p>${personalizedMessage}</p>`;
